build/apps/pcp-proxy/base/resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pcp-proxy
spec:
  externalName: 192.168.40.12
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/instance: traefik
    task: pcp-proxy
  type: ExternalName
