build/apps/pcp-proxy/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pcp-proxy
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: route53-letsencrypt-staging
    #external-dns.alpha.kubernetes.io/target: infra.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pcp-proxy.anotherlife.pl`)
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: pcp-proxy
          port: 80

  tls:
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    #secretName: letsencrypt-staging
